unpackaged/main/default/objects/Account/fields/Aldersea_May25_2023__c.field-meta.xml
<CustomField>
    <fullName>Aldersea_May25_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aldersea-May25.2023</label>
    <type>Checkbox</type>
</CustomField>