unpackaged/main/default/objects/Account/fields/Feb2023__c.field-meta.xml
<CustomField>
    <fullName>Feb2023__c</fullName>
    <label>Feb2023</label>
    <length>255</length>
    <type>Text</type>
</CustomField>