unpackaged/main/default/objects/Account/fields/HandoverNotes2__c.field-meta.xml
<CustomField>
    <fullName>HandoverNotes2__c</fullName>
    <label>HandoverNotes2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>