unpackaged/main/default/objects/Account/fields/HandoverNotes_3__c.field-meta.xml
<CustomField>
    <fullName>HandoverNotes_3__c</fullName>
    <label>HandoverNotes 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>