unpackaged/main/default/objects/Account/fields/Mar2023__c.field-meta.xml
<CustomField>
    <fullName>Mar2023__c</fullName>
    <label>Mar2023</label>
    <length>100</length>
    <type>Text</type>
</CustomField>