unpackaged/main/default/objects/Account/fields/New_field__c.field-meta.xml
<CustomField>
    <fullName>New_field__c</fullName>
    <description>Test field</description>
    <inlineHelpText>Test</inlineHelpText>
    <label>New field</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>