unpackaged/main/default/objects/Account/fields/Pipelines_Fundamentals__c.field-meta.xml
<CustomField>
    <fullName>Pipelines_Fundamentals__c</fullName>
    <label>Pipelines-Fundamentals</label>
    <length>100</length>
    <type>Text</type>
</CustomField>