unpackaged/main/default/objects/Account/fields/Pipelines_Releases__c.field-meta.xml
<CustomField>
    <fullName>Pipelines_Releases__c</fullName>
    <label>Pipelines-Releases</label>
    <length>250</length>
    <type>Text</type>
</CustomField>