unpackaged/main/default/objects/Account/fields/PipelinesDemo__c.field-meta.xml
<CustomField>
    <fullName>PipelinesDemo__c</fullName>
    <label>PipelinesDemo</label>
    <length>230</length>
    <type>Text</type>
</CustomField>