unpackaged/main/default/objects/Account/fields/Shadowing__c.field-meta.xml
<CustomField>
    <fullName>Shadowing__c</fullName>
    <label>Shadowing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>