unpackaged/main/default/objects/Account/fields/Test_S__c.field-meta.xml
<CustomField>
    <fullName>Test_S__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test_S</label>
    <type>Checkbox</type>
</CustomField>