unpackaged/main/default/objects/Account/fields/Test_SS__c.field-meta.xml
<CustomField>
    <fullName>Test_SS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test_SS</label>
    <type>Checkbox</type>
</CustomField>