unpackaged/main/default/objects/Account/fields/X2023_July_05__c.field-meta.xml
<CustomField>
    <fullName>X2023_July_05__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR;PCI</complianceGroup>
    <label>2023-July-05</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>