unpackaged/main/default/objects/Account/fields/X2023_July_07__c.field-meta.xml
<CustomField>
    <fullName>X2023_July_07__c</fullName>
    <label>2023-July-07</label>
    <type>Date</type>
</CustomField>