unpackaged/main/default/objects/Account/fields/X2025_March_07_Test1__c.field-meta.xml
<CustomField>
    <fullName>X2025_March_07_Test1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing what happens when I promote this field towards INT first, but then merge first another PR that will be promoted after this one. Which PR will show on the &quot;Recent promotion history tag&quot; first?</description>
    <label>2025_March_07_Test1</label>
    <type>Checkbox</type>
</CustomField>