unpackaged/main/default/objects/Account/fields/X2025_March_07_Test2__c.field-meta.xml
<CustomField>
    <fullName>X2025_March_07_Test2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test field 2</description>
    <label>2025_March_07_Test2</label>
    <type>Checkbox</type>
</CustomField>