unpackaged/main/default/objects/Account/recordTypes/CSE_Support.recordType-meta.xml
<RecordType>
    <fullName>CSE_Support</fullName>
    <active>true</active>
    <description>Support for Customer Success Engineers</description>
    <label>CSE Support</label>
</RecordType>